--- a/Prescribe_Medication_Page.html
+++ b/Prescribe_Medication_Page.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Glowria Clinic</title>
-        <link rel="stylesheet" href="form_Style.css">
+        <link rel="stylesheet" href="Form_Style.css">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     </head>
     <body>
