--- a/Sign_Up_Page.html
+++ b/Sign_Up_Page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <link rel="stylesheet" href="signup-style.css">
+    <link rel="stylesheet" href="Sign_Up_Style.css">
     <script>
         function showForm(role) {
             const patientForm = document.getElementById('patient-form');
