--- a/Appointment_Booking_Page.html
+++ b/Appointment_Booking_Page.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Glowria Clinic</title>
-        <link rel="stylesheet" href="form_Style.css">
+        <link rel="stylesheet" href="Form_Style.css">
         <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     </head>
     <body>
@@ -15,7 +15,7 @@
             </div>
             <nav class="navigation">
                 <a href="Home.html">Home</a>
-                <a href="about.html">About</a>
+                <a href="About.html">About</a>
             </nav>
         </header>
         <div id="appointment-container">
