--- a/Home.html
+++ b/Home.html
@@ -16,7 +16,7 @@
         </div>
         <nav class="navigation">
             <a href="Home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="About.html">About</a>
         </nav>
     </header>
     <!-- HTML -->
