--- a/Sign_Up_Page.html
+++ b/Sign_Up_Page.html
@@ -28,7 +28,7 @@
         </div>
         <nav class="navigation">
             <a href="Home.html">Home</a>
-            <a href="about.html">About</a>
+            <a href="About.html">About</a>
         </nav>
     </header>
 
